@startuml MySchedule
title MySchedule クラス図
skinparam dpi 150

class Application {
  - appUser: AppUser

  + run(): void
  - initializeFirebase(): void
  - redirect(): void
  - createPage(): void
}

class FirebaseInitializer {
  - readonly defaultConfig: object
  - firebaseConfig: object
  - app: FirebaseApp
  - analytics: Analytics

  + initialize(): void
}

class AppUser {
    - uid: string
    - userInfo: UserInfo

    - get userInfo(): UserInfo
    - set userInfo(userInfo: UserInfo): void
}

class PageUtils {
  + createPage(): void
}

Application --> FirebaseInitializer
Application --> AppUser
Application --> PageUtils

@enduml